--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/overlay.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/overlay",
-      "dest": "/api/overlay.js"
+      "src": "/(.*)",
+      "dest": "/api/index.js"
     }
   ]
 }
