--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A simple API to overlay two videos using FFmpeg",
   "main": "index.js",
   "scripts": {
-    "start": "node api/overlay.js"
+    "start": "node api/index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "fluent-ffmpeg": "^2.1.2"
+    "fluent-ffmpeg": "^2.1.2",
+    "uuid": "^8.3.2"
   }
 }
